plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

sourceCompatibility = 11
targetCompatibility = 11
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
application {
    mainClass = 'com.noticeditorteam.noticeditor.Main'
    applicationDefaultJvmArgs = [
        '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED'
    ]
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['src']
        }
    }
    test {
        java {
            srcDirs = ['test']
        }
    }
}

shadowJar {
    mergeServiceFiles()
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
}

javafx {
    version = '14'
    modules = [
        'javafx.controls', 'javafx.fxml',
        'javafx.swing', 'javafx.web'
    ]
}

dependencies{
    implementation fileTree(dir: 'libs', include: '*.jar')
    implementation 'net.lingala.zip4j:zip4j:1.3.3' // upgradeable to 2.6.1
    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'org.json:json:20200518'
    implementation 'org.pegdown:pegdown:1.6.0' // todo replace with flexmark

    testImplementation 'junit:junit:4.12'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
    testImplementation 'com.carrotsearch:junit-benchmarks:0.7.2'
}
